style: Update meta tags and title in index.html for improved SEO and branding

--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>Aithor</title>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <title>Aithor - Chat with Multiple AI Models</title>
+  <meta name="description" content="Aithor is the ultimate platform to chat with multiple AI models like ChatGPT, Gemini, Claude, Perplexity, and more using your own API keys. Fast, secure, and easy to use." />
+  <meta name="keywords" content="Aithor, AI chat, ChatGPT, Gemini, Claude, Perplexity, DeepSeek, AI models, API keys, multi-model chat, secure AI, fast AI, AI platform" />
+  <meta name="author" content="Aithor Team" />
+  <meta name="robots" content="index, follow" />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://chat-with-aithor.vercel.app/" />
+  <meta property="og:title" content="Aithor - Chat with Multiple AI Models" />
+  <meta property="og:description" content="Aithor lets you chat with ChatGPT, Gemini, Claude, Perplexity, and more using your own API keys. Fast, secure, and easy to use." />
+  <meta property="og:image" content="https://chat-with-aithor.vercel.app/logo.png" />
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://chat-with-aithor.vercel.app/" />
+  <meta name="twitter:title" content="Aithor - Chat with Multiple AI Models" />
+  <meta name="twitter:description" content="Aithor lets you chat with ChatGPT, Gemini, Claude, Perplexity, and more using your own API keys. Fast, secure, and easy to use." />
+  <meta name="twitter:image" content="https://chat-with-aithor.vercel.app/logo.png" />
   </head>
   <body>
     <div id="root"></div>
