feat: Add PWA support with manifest and Apple touch icons in index.html and manifest.json

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
   <meta name="twitter:title" content="Aithor - Chat with Multiple AI Models" />
   <meta name="twitter:description" content="Aithor lets you chat with ChatGPT, Gemini, Claude, Perplexity, and more using your own API keys. Fast, secure, and easy to use." />
   <meta name="twitter:image" content="https://chat-with-aithor.vercel.app/logo.png" />
+  <link rel="manifest" href="/manifest.json">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="Aithor">
+  <link rel="apple-touch-icon" href="/logo.png">
   </head>
   <body>
     <div id="root"></div>
