style: Add iOS support meta tags in index.html for improved compatibility

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
   <meta name="twitter:description" content="Aithor lets you chat with ChatGPT, Gemini, Claude, Perplexity, and more using your own API keys. Fast, secure, and easy to use." />
   <meta name="twitter:image" content="https://chat-with-aithor.vercel.app/logo.png" />
   <link rel="manifest" href="/manifest.json">
+
+  <!-- for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="apple-mobile-web-app-title" content="Aithor">
